--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/application2.css" rel="stylesheet">
+    <link href="css/application.css" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
@@ -21,22 +21,25 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container" style="height: 180px;">
+    <div class="container" style="">
       <div class="row">
-        <div class="col-md-6">
-          <h1 style="font-family: 'Roboto Slab', serif; font-size: 56px; padding-top: 20px;">ИНТЕРХОЛОД</h1>
-          <h4 style="">Ремонт холодильной техники в Ухте и пригородах.</h4>
+        <div class="col-xs-12 col-sm-12 col-md-6 ">
+          <h1 class='logo' style="">ИНТЕРХОЛОД</h1>
+          <h4 class='subtitle'>Ремонт холодильной техники в Ухте и пригороде.</h4>
+          <!-- <h4 style="">Водный, Шудаяг, Ветлосян, Югер, Бельгоп</h4> -->
         </div>
-        <div class="col-md-4">
-          <div class="pull-right">
-            <h4 class="pull-right" style="padding-top: 30px;">Заявки по телефонам:</h4>
-            <br />
-            <h2 class="pull-right" style="margin-top: 0px; color: #e42d28;">
+        <div class="col-xs-12 col-sm-12 col-md-4">
+          <div class="row" style="padding-right: 20px;">
+            <h4 class='order-title-first'>Заявки по телефонам:</h4>
+          </div>
+          <div class="row" style="padding-right: 20px;">
+            <h2 class='order-title-second'>
               <span>74-35-45</span>
             </h2>
-            <br />
-            <h4 class="pull-right" style="margin-top: 0px; color: #e42d28;">
-              <span style="padding-right: 20px">
+          </div>
+          <div class="row" style="padding-right: 20px;">
+            <h4 class='order-title-third'>
+              <span style="padding-right: 10px">
                 <span style="padding-right: 10px">МТС</span>
                 77-66-74
               </span>
@@ -47,7 +50,7 @@
             </h4>
           </div>
         </div>
-        <div class="col-md-2">
+        <div class="hidden-xs hidden-sm col-md-2">
           <img src="img/pingvin.png" style="padding-top: 10px;">
         </div>
       </div>
@@ -55,18 +58,20 @@
 
     <!-- <h2 style="text-align: center; background-color: #3397cc; color: #FFF; padding: 10px 0; margin: 0;">Мы ремонтируем холодильники и делаем это хорошо!</h2> -->
 
-    <div style="height: 300px; background-color: rgb(29, 123, 173)">
+
+    <div style="background-color: rgb(29, 123, 173)">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6 hidden-xs hidden-sm hidden-md">
             <img src="img/ref3.jpg">
           </div>
-          <div class="col-md-6" style="color: #FFF; padding-left: 30px; padding-top: 20px;">
+          <div class="col-md-12 col-lg-6" style="color: #FFF; padding-left: 30px; padding-top: 10px;">
             <h2>Сломался холодильник?</h2>
             <p>Холодильники выходят из строя не зависимо от времени года, выходных и праздников, поэтому наша служба работает для Вас постоянно, 7 дней в неделю
             365 дней в году. Обращаясь к нам, вы полностью избавляетесь от проблем связанных с ремонтом холодильников и морозильных камер.</p>
             <p>Мы осуществляем профессиональный ремонт холодильников практически всех присутствующих на рынке брендов. Мы работаем с 1991 года. За этот
             период было отремонтированно свыше 30 000 холодильников.</p>
+            <h4 style="padding-top: 15px; padding-bottom: 15px;">Мы ремонтируем холодильники и делаем это хорошо!</h4>
           </div>
         </div>
       </div>
@@ -107,16 +112,16 @@
     <div class="container" style="padding-top: 40px;">
       <div class="row">
         <div class="col-md-12" style="text-align: center;">
-          <img src="img/logos1.png" style="margin-bottom: 40px;">
-          <img src="img/logos2.png" style="margin-bottom: 40px;">
-          <img src="img/logos3.png" style="margin-bottom: 40px;">
-          <img src="img/logos4.png">
+          <img src="img/logos1.png" style="margin-bottom: 40px;" class="img-responsive">
+          <img src="img/logos2.png" style="margin-bottom: 40px;" class="img-responsive">
+          <img src="img/logos3.png" style="margin-bottom: 40px;" class="img-responsive">
+          <img src="img/logos4.png" class="img-responsive">
         </div>
       </div>
     </div>
 
-    <div style="height: 50px; background-color: #333; color: #FFF; margin-top: 50px; text-align: center;">
-      <div class="container" style="padding-top: 20px;">
+    <div style="height: 50px; width: 100%; background-color: #333; color: #FFF; margin-top: 50px; text-align: center;">
+      <div class="container" style="padding-top: 15px;">
         <div class="row">
           <span style="padding-right: 20px">ЧП "ИНТЕРХОЛОД"</span>
           <span style="padding-right: 20px">Ремонт холодильной техники в Ухте и пригородах.</span>
